--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
             </a>
         </div>
     </section>
+    <section id="contact">
+        <a id="profile-link" href="https://github.com/ejlmorin11" target="_blank">Github</a>
+    </section>
     </body>
 
 <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
