--- a/index.html
+++ b/index.html
@@ -30,14 +30,49 @@
         <div class="projects-grid">
             <a href="#" class="project-tile">
                 <figure>
-                    <img/>
+                    <img/src="/images/Webp.net-resizeimage.png">
+                    <figcaption>My figure caption</figcaption>
+                </figure>
+            </a>
+            <a href="#" class="project-tile">
+                <figure>
+                    <img/src="/images/Webp.net-resizeimage.png">
+                    <figcaption>My figure caption</figcaption>
+                </figure>
+            </a>
+            <a href="#" class="project-tile">
+                <figure>
+                    <img/src="/images/Webp.net-resizeimage.png">
+                    <figcaption>My figure caption</figcaption>
+                </figure>
+            </a>
+            <a href="#" class="project-tile">
+                <figure>
+                    <img/src="/images/Webp.net-resizeimage.png">
+                    <figcaption>My figure caption</figcaption>
+                </figure>
+            </a>
+            <a href="#" class="project-tile">
+                <figure>
+                    <img/src="/images/Webp.net-resizeimage.png">
+                    <figcaption>My figure caption</figcaption>
+                </figure>
+            </a>
+            <a href="#" class="project-tile">
+                <figure>
+                    <img/src="/images/Webp.net-resizeimage.png">
                     <figcaption>My figure caption</figcaption>
                 </figure>
             </a>
         </div>
     </section>
-    <section id="contact">
+    <section id="contacts">
+        <h2>Let's work together</h2>
+        <a id="profile-link" href="https://github.com/ejlmorin11" target="_blank">LinkedIn</a>
         <a id="profile-link" href="https://github.com/ejlmorin11" target="_blank">Github</a>
+        <a id="profile-link" href="https://github.com/ejlmorin11" target="_blank">Twitter</a>
+        <a id="profile-link" href="https://github.com/ejlmorin11" target="_blank">Send an email</a>
+        <a id="profile-link" href="https://github.com/ejlmorin11" target="_blank">Phone</a>
     </section>
     </body>
 <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
