--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <link href="index.css" rel="stylesheet"/>
+  <link
+  rel="stylesheet"
+  href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+  integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
+  crossorigin="anonymous"
+/>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Ephesis&display=swap" rel="stylesheet">
+
         <title>EJ's Personal Portfolio
         </title>
     </head>
@@ -23,10 +33,12 @@
             </ul>
         </nav>
         <section id="welcome-section">
-        <h1>Greetings there, I am EJ
+        <h1>Greetings there
         </h1>
+        <h3>I am EJ</h3>
     </section>
     <section id="projects">
+        <h3>Behold, my projects</h3>
         <div class="projects-grid">
             <a href="#" class="project-tile">
                 <figure>
@@ -67,13 +79,21 @@
         </div>
     </section>
     <section id="contacts">
-        <h2>Let's work together</h2>
-        <a id="profile-link" href="https://github.com/ejlmorin11" target="_blank">LinkedIn</a>
-        <a id="profile-link" href="https://github.com/ejlmorin11" target="_blank">Github</a>
-        <a id="profile-link" href="https://github.com/ejlmorin11" target="_blank">Twitter</a>
-        <a id="profile-link" href="https://github.com/ejlmorin11" target="_blank">Send an email</a>
-        <a id="profile-link" href="https://github.com/ejlmorin11" target="_blank">Phone</a>
+        <h1>Let's work together</h1>
+        <h4>Contact me by...</h4>
+        <div>
+        <a id="profile-link" href="https://linkedin.com/in/edward-morin-jr-ej-28608399" target="_blank"> Linked <i class="fab fa-linkedin"></i></a>
+        <a id="profile-link" href="https://github.com/ejlmorin11" target="_blank"><i class="fab fa-github"></i> Github</a>
+        <a id="profile-link" href="#"><i class="fab fa-twitter"></i> Twitter</a>
+        <a id="profile-link" href="https://github.com/ejlmorin11" target="_blank"><i class="fas fa-inbox"></i> email</a>
+        <a id="profile-link" href="https://github.com/ejlmorin11" target="_blank"><i class="fas fa-mobile-alt"></i> Phone</a>
+        </div>
     </section>
     </body>
+    <footer>
+        <h4>
+sample portfolio created for DGM1600 by EJ Morin &copy; 2021
+        </h4>
+    </footer>
 <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </html>
