--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 />
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Ephesis&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Gemunu+Libre:wght@700&display=swap" rel="stylesheet">
 
         <title>EJ's Personal Portfolio
         </title>
@@ -43,37 +43,37 @@
             <a href="#" class="project-tile">
                 <figure>
                     <img/src="/images/Webp.net-resizeimage.png">
-                    <figcaption>My figure caption</figcaption>
+                    <figcaption>Project #1</figcaption>
                 </figure>
             </a>
             <a href="#" class="project-tile">
                 <figure>
                     <img/src="/images/Webp.net-resizeimage.png">
-                    <figcaption>My figure caption</figcaption>
+                    <figcaption>Project #2</figcaption>
                 </figure>
             </a>
             <a href="#" class="project-tile">
                 <figure>
                     <img/src="/images/Webp.net-resizeimage.png">
-                    <figcaption>My figure caption</figcaption>
+                    <figcaption>Project #3</figcaption>
                 </figure>
             </a>
             <a href="#" class="project-tile">
                 <figure>
                     <img/src="/images/Webp.net-resizeimage.png">
-                    <figcaption>My figure caption</figcaption>
+                    <figcaption>Project #4</figcaption>
                 </figure>
             </a>
             <a href="#" class="project-tile">
                 <figure>
                     <img/src="/images/Webp.net-resizeimage.png">
-                    <figcaption>My figure caption</figcaption>
+                    <figcaption>Project #5</figcaption>
                 </figure>
             </a>
             <a href="#" class="project-tile">
                 <figure>
                     <img/src="/images/Webp.net-resizeimage.png">
-                    <figcaption>My figure caption</figcaption>
+                    <figcaption>Project #6</figcaption>
                 </figure>
             </a>
         </div>
@@ -85,9 +85,9 @@
         <a id="profile-link" href="https://linkedin.com/in/edward-morin-jr-ej-28608399" target="_blank"> Linked <i class="fab fa-linkedin"></i></a>
         <a id="profile-link" href="https://github.com/ejlmorin11" target="_blank"><i class="fab fa-github"></i> Github</a>
         <a id="profile-link" href="#"><i class="fab fa-twitter"></i> Twitter</a>
-        <a id="profile-link" href="https://github.com/ejlmorin11" target="_blank"><i class="fas fa-inbox"></i> email</a>
-        <a id="profile-link" href="https://github.com/ejlmorin11" target="_blank"><i class="fas fa-mobile-alt"></i> Phone</a>
-        </div>
+        <a href="tel:6618001633"><i class="fas fa-mobile-alt"></i> Phone</a>
+        <a href="mailto:10552716@my.uvu.edu"><i class="fas fa-inbox"></i> Email</a>    
+    </div>
     </section>
     </body>
     <footer>
