listed film items and added 1st image

--- a/films/index.html
+++ b/films/index.html
@@ -9,7 +9,8 @@
     </title>
 </head>
 <body>
-    <h1>Star Wars Films</h1>
+    <header>Star Wars Films</header>
+    <main id="filmlist"</main>
 </body>
 <script src="starwars-films.js" type="module"></script>
 </html>
