done with films page for now

--- a/films/index.html
+++ b/films/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>Star Wars Films</header>
-    <main id="filmlist"</main>
+    <main id="filmlist"></main>
+    <script src="starwars-films.js" type="module"></script>
 </body>
-<script src="starwars-films.js" type="module"></script>
 </html>
