--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
     <section id="projects">
         <h3>Behold, my projects</h3>
         <div class="projects-grid">
-            <a href="#" class="project-tile">
+            <a href="/films/index.html" class="project-tile">
                 <figure>
                     <img/src="/images/Webp.net-resizeimage.png">
-                    <figcaption>Project #1</figcaption>
+                    <figcaption>Star Wars Films</figcaption>
                 </figure>
             </a>
             <a href="#" class="project-tile">
