Adjust poster size, create color scheme for films, import font families

--- a/films/index.html
+++ b/films/index.html
@@ -5,11 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style.css" rel="stylesheet"/>
-    <title>Star Wars Films
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Qahiri&display=swap" rel="stylesheet">
+    <title>STAR WARS FILMS
     </title>
 </head>
 <body>
-    <header>Star Wars Films</header>
+    <header><h1>STAR WARS FILMS</h1></header>
     <main id="filmlist"></main>
     <script src="starwars-films.js" type="module"></script>
 </body>
