--- a/films/index.html
+++ b/films/index.html
@@ -12,7 +12,7 @@
     </title>
 </head>
 <body>
-    <header><h1>STAR WARS FILMS</h1></header>
+    <header><img id="double_moons" src="Untitled-3.png"><h1>STAR WARS FILMS</h1></header>
     <main id="filmlist"></main>
     <script src="starwars-films.js" type="module"></script>
 </body>
