Added Modal, connected images from portfolio as links

--- a/index.html
+++ b/index.html
@@ -42,37 +42,37 @@
         <div class="projects-grid">
             <a href="/films/index.html" class="project-tile">
                 <figure>
-                    <img/src="/images/Webp.net-resizeimage.png">
+                    <img src="/images/filmsImage.jpg">
                     <figcaption>Star Wars Films</figcaption>
                 </figure>
             </a>
-            <a href="#" class="project-tile">
+            <a href="/characters/index.html" class="project-tile">
                 <figure>
-                    <img/src="/images/Webp.net-resizeimage.png">
-                    <figcaption>Project #2</figcaption>
+                    <img src="/images/Webp.net-resizeimage.png">
+                    <figcaption>Star Wars Characters</figcaption>
+                </figure>
+            </a>
+            <a href="/starships/index.html" class="project-tile">
+                <figure>
+                    <img src="/images/starshipsImage.jpg">
+                    <figcaption>Starships</figcaption>
                 </figure>
             </a>
             <a href="#" class="project-tile">
                 <figure>
-                    <img/src="/images/Webp.net-resizeimage.png">
-                    <figcaption>Project #3</figcaption>
-                </figure>
-            </a>
-            <a href="#" class="project-tile">
-                <figure>
-                    <img/src="/images/Webp.net-resizeimage.png">
+                    <img src="/images/Webp.net-resizeimage.png">
                     <figcaption>Project #4</figcaption>
                 </figure>
             </a>
             <a href="#" class="project-tile">
                 <figure>
-                    <img/src="/images/Webp.net-resizeimage.png">
+                    <img src="/images/Webp.net-resizeimage.png">
                     <figcaption>Project #5</figcaption>
                 </figure>
             </a>
             <a href="#" class="project-tile">
                 <figure>
-                    <img/src="/images/Webp.net-resizeimage.png">
+                    <img src="/images/Webp.net-resizeimage.png">
                     <figcaption>Project #6</figcaption>
                 </figure>
             </a>
@@ -92,7 +92,7 @@
     </body>
     <footer>
         <h4>
-sample portfolio created for DGM1600 by EJ Morin &copy; 2021
+sample portfolio created for DGM1600 by EJ Morin &copy; 2021 For Educational Purposes Only
         </h4>
     </footer>
 </html>
