added footer to all pages

--- a/films/index.html
+++ b/films/index.html
@@ -16,4 +16,10 @@
     <main id="filmlist"></main>
     <script src="starwars-films.js" type="module"></script>
 </body>
+<footer>
+    <h4>
+sample portfolio created for DGM1600 by EJ Morin &copy; 2021 For Educational Purposes Only
+    </h4>
+</footer>
+</html>
 </html>
