--- a/characters/index.html
+++ b/characters/index.html
@@ -11,4 +11,10 @@
     <main id="main"></main>
     <script src="sw-chars.js" type="module"></script>
 </body>
+<footer>
+    <h4>
+sample portfolio created for DGM1600 by EJ Morin &copy; 2021 For Educational Purposes Only
+    </h4>
+</footer>
+</html>
 </html>
