--- a/starships/index.html
+++ b/starships/index.html
@@ -30,8 +30,11 @@
         <button class="modal-close is-large" aria-label="close"></button>
     </div>
     <footer>
-        <p>&copy; EJ Morin DGM1600 2021</p>
+        <h4>
+sample portfolio created for DGM1600 by EJ Morin &copy; 2021 For Educational Purposes Only
+        </h4>
     </footer>
+</html>
     <script src="sw-starships.js" type="module"></script>
 </body>
 </html>
