added header for characters page, messed with header for films page

--- a/characters/index.html
+++ b/characters/index.html
@@ -7,6 +7,9 @@
     <link href="style.css" rel="stylesheet"/>
     <title>Star Wars Characters</title>
 </head>
+<header>
+<h1>Star Wars Characters</h1>  
+</header>
 <body>
     <main id="main"></main>
     <script src="sw-chars.js" type="module"></script>
