finish characters page, create links

--- a/index.html
+++ b/index.html
@@ -40,21 +40,21 @@
     <section id="projects">
         <h3>Behold, my projects</h3>
         <div class="projects-grid">
+            <a href="/characters/index.html" class="project-tile">
+            <figure>
+                <img src="charactersImage.png">
+                <figcaption>Star Wars Characters</figcaption>
+            </figure>
+            </a>
             <a href="/films/index.html" class="project-tile">
                 <figure>
-                    <img src="/images/filmsImage.jpg">
+                    <img src="filmsImage.png">
                     <figcaption>Star Wars Films</figcaption>
-                </figure>
-            </a>
-            <a href="/characters/index.html" class="project-tile">
-                <figure>
-                    <img src="/images/Webp.net-resizeimage.png">
-                    <figcaption>Star Wars Characters</figcaption>
                 </figure>
             </a>
             <a href="/starships/index.html" class="project-tile">
                 <figure>
-                    <img src="/images/starshipsImage.jpg">
+                    <img src="starshipsImage.png">
                     <figcaption>Starships</figcaption>
                 </figure>
             </a>
