--- a/characters/index.html
+++ b/characters/index.html
@@ -4,15 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Warnes&display=swap" rel="stylesheet"> 
     <link href="style.css" rel="stylesheet"/>
     <title>Star Wars Characters</title>
 </head>
 <header>
-<h1>Star Wars Characters</h1>  
+    <img id="rey" src="reySkywalkerResized.png">
+<h1 class="heading">Star Wars Characters</h1> 
+    <img id="c3po" src="c3p0andR2D2BlackandWhiteResized.png">
 </header>
+<p>
+    &#9888; CLICK character and HOLD to enlarge image!
+</p>
 <body>
     <main id="main"></main>
     <script src="sw-chars.js" type="module"></script>
+    
 </body>
 <footer>
     <h4>
