finished films and characters page. maybe check on background-image for films page

--- a/films/index.html
+++ b/films/index.html
@@ -12,7 +12,7 @@
     </title>
 </head>
 <body>
-    <header><img src="houseoutline.png" id="house"><img id="double_moons" src="Untitled-3.png"><h1>STAR WARS FILMS</h1><img src="StarwarsSpeederBlackandWhite.png" id="speeder"></header>
+    <header><img id="double_moons" src="Untitled-3.png"><h1>STAR WARS FILMS</h1><img src="StarwarsSpeederBlackandWhite.png" id="speeder"></header>
     <main id="filmlist"></main>
     <script src="starwars-films.js" type="module"></script>
 </body>
@@ -23,3 +23,4 @@ sample portfolio created for DGM1600 by EJ Morin &copy; 2021 For Educational Pur
 </footer>
 </html>
 </html>
+
