finished styling star ships page

--- a/starships/index.html
+++ b/starships/index.html
@@ -14,11 +14,11 @@
 </head>
 <body>
     <header>
-        <h1>Starships of Star Wars</h1>
+         <img src="xWingShipBlackandWhite.png" id="xWing" width="250" height="147"><h1>Starships of Star Wars</h1><img src="tieFighterBlackandWhite.png" id="tieFighter" width="125" height="122">
     </header>
     <main class='mainContainer'>
         <nav class="nav">
-            <ul class="navList"></ul>
+            <ul class="navList" id="textColor"></ul>
         </nav>
         <section class="shipViewer"></section>
     </main>
