upgrade #1 final, updated header background

--- a/characters/index.html
+++ b/characters/index.html
@@ -13,10 +13,10 @@
 <header>
     <img id="rey" src="reySkywalkerResized.png">
 <h1 class="heading">Star Wars Characters</h1> 
-    <img id="c3po" src="c3p0andR2D2BlackandWhiteResized.png">
+    <img class="c3po" src="c3p0andR2D2BlackandWhiteResized.png">
 </header>
 <p>
-    &#9888; CLICK character and HOLD to enlarge image!
+    &#9888; CLICK and HOLD to enlarge image!
 </p>
 <body>
     <main id="main"></main>
