added even listeners, NEED removeChildren

--- a/Congress/index.html
+++ b/Congress/index.html
@@ -7,20 +7,29 @@
     <link href="style.css" rel="stylesheet"/>
     <title>People of Congress</title>
 </head>
-<body>
-    <header><h1>People of Congress</h1>
-    <h2 class="seniority"></h2>
-    <div>
-        <ol class='weaselList'>
+    <header><h1 >People of Congress</h1>
 
-        </ol>
-    </div>
-    <button>Republicans</button>
-    <button>Democrats</button>
-    <button>Senators</button>
-    <button>Representatives</button>
 </header>
+<body>
+    <main id="main"></main>
+<main id="buttonHeader"></main>
+    
+<h2 class="seniority"></h2>
+<div>
+    <ol class='weaselList'>
+
+    </ol>
+</div>
+<!--
+<button>Republicans</button>
+<button>Democrats</button>
+<button>Senators</button>
+<button>Representatives</button>
+-->
     <main>
+        <main id="main"></main>
+
+        <main id="buttonHeader"></main>
         <div class="senators">
             
         </div>
