added style, NEED make headline for the list

--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
                     <figcaption>Starships</figcaption>
                 </figure>
             </a>
-            <a href="#" class="project-tile">
+            <a href="/Congress/index.html" class="project-tile">
                 <figure>
                     <img src="/images/Webp.net-resizeimage.png">
-                    <figcaption>Project #4</figcaption>
+                    <figcaption>Congress</figcaption>
                 </figure>
             </a>
             <a href="#" class="project-tile">
