edited buttons, weaselheader and list, added logos

--- a/Congress/index.html
+++ b/Congress/index.html
@@ -22,7 +22,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Asap&display=swap" rel="stylesheet">
     <title>People of Congress</title>
 </head>
-    <header><h1>We the<br>People of Congress</h1>
+    <header><img src="capitolTop.png"><h1>We the People...<br>of Congress</h1><img src="USLogo.png">
 
 </header>
 <body>
