--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </a>
             <a href="/Congress/index.html" class="project-tile">
                 <figure>
-                    <img src="/images/Webp.net-resizeimage.png">
+                    <img src="/images/CONGRESS-BUDGET-Michael-Ramirez1.png">
                     <figcaption>Congress</figcaption>
                 </figure>
             </a>
