linked to portfolio home, added pic tile

--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
                     <figcaption>Congress</figcaption>
                 </figure>
             </a>
-            <a href="#" class="project-tile">
+            <a href="/pokemon/index.html" class="project-tile">
                 <figure>
-                    <img src="/images/Webp.net-resizeimage.png">
-                    <figcaption>Project #5</figcaption>
+                    <img src="/images/PokemonLinkIMG.png">
+                    <figcaption>Pokemon Cards</figcaption>
                 </figure>
             </a>
             <a href="#" class="project-tile">
