--- a/pokemon/index.html
+++ b/pokemon/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="style.css" rel="stylesheet" />
-    <title>Pokemon Cards</title>
+    <title>pokemon Cards</title>
   </head>
   <body>
-    <header>Pokemon Cards</header>
+    <header>Pokemon Cards: <br> Gotta flip 'em all</header>
     <main>
         <div class="pokeGrid"></div>
     </main>
