added user interaction abilities, user add pokemon

--- a/pokemon/index.html
+++ b/pokemon/index.html
@@ -8,7 +8,12 @@
     <title>pokemon Cards</title>
   </head>
   <body>
-    <header>Pokemon Cards: <br> Gotta flip 'em all</header>
+    <header><h1>Pokemon Cards</h1> <br> <h2>Gotta flip 'em all</h2>
+    <button class="loadPokemon">Load Button</button>
+    <button class="newPokemon">New Pokemon</button>
+    <button class="morePokemon">Load Even MORE Pokemon!</button>
+  </header>
+    
     <main>
         <div class="pokeGrid"></div>
     </main>
