added hp, made labels and content different texts

--- a/pokemon/index.html
+++ b/pokemon/index.html
@@ -18,6 +18,7 @@
     <button class="loadPokemon">Load Button</button>
     <button class="newPokemon">New Pokemon</button>
     <button class="morePokemon">Load Even MORE Pokemon!</button>
+    <button class="randomPokemon">Generate Random Pokemon</button>
   </header>
     
     <main>
