--- a/pokemon/index.html
+++ b/pokemon/index.html
@@ -15,14 +15,27 @@
   </head>
   <body>
     <header><h1>Pokemon Cards</h1> <br> <h2>Gotta flip 'em all</h2>
-    <button class="loadPokemon">Load Button</button>
-    <button class="newPokemon">New Pokemon</button>
-    <button class="morePokemon">Load Even MORE Pokemon!</button>
-    <button class="randomPokemon">Generate Random Pokemon</button>
-  </header>
-    
+      <button class="loadPokemon">Load Pokemon</button>
+      <button class="newPokemon">New Pokemon</button>
+      <button class="morePokemon">Load More Pokemon</button>
+      <button class="randomPokemon">Random Pokemon</button>
+      <button class='sortButton'>Sort Pokemon</button>
+      <select id='typeSelector'>
+        <option>Water</option>
+        <option>Fire</option>
+        <option>Grass</option>
+        <option>Poison</option>
+        <option>Ground</option>
+        <option>Flying</option>
+        <option>Psychic</option>
+        <option>Dragon</option>
+        <option>Fairy</option>
+        <option>Normal</option>
+    </select>
+      <!-- add a button for the user to select a pokemon to see by name or id -->
+    </header>
     <main>
-        <div class="pokeGrid"></div>
+      <div class="pokeGrid"></div>
     </main>
     <footer></footer>
     <script src="pokecode.js" type="module"></script>
