attempting to fix my "create pokemon button"

--- a/pokemon/index.html
+++ b/pokemon/index.html
@@ -15,11 +15,11 @@
   </head>
   <body>
     <header><h1>Pokemon Cards</h1> <br> <h2>Gotta flip 'em all</h2>
+      <button class="newPokemon">Create a Pokemon</button>
       <button class="loadPokemon">Load Pokemon</button>
-      <button class="newPokemon">New Pokemon</button>
       <button class="morePokemon">Load More Pokemon</button>
       <button class="randomPokemon">Random Pokemon</button>
-      <button class='sortButton'>Sort Pokemon</button>
+      <button class='sortButton'>Pokemon Types</button>
       <select id='typeSelector'>
         <option>Water</option>
         <option>Fire</option>
