edited new card img, edited info text color

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </a>
             <a href="/pokemon/index.html" class="project-tile">
                 <figure>
-                    <img src="/images/PokemonLinkIMG.png">
+                    <img src="/images/PokemonLinkIMG.jpg">
                     <figcaption>Pokemon Cards</figcaption>
                 </figure>
         </div>
