--- a/pokemon/index.html
+++ b/pokemon/index.html
@@ -15,14 +15,16 @@
   </head>
   <body>
     <header><h1>Pokemon Cards</h1> <br> <h2>Gotta flip 'em all</h2>
-      <button class="newPokemon">Create a Pokemon</button>
-      <button class="loadPokemon">Load Pokemon</button>
-      <button class="morePokemon">Load More Pokemon</button>
       <button class="randomPokemon">Random Pokemon</button>
+      <button class="loadPokemon">Load 100 Pokemon</button>
+      <button class="morePokemon">Load More Pokemon</button>
+      <button class="newPokemon">Create a Pokemon</button>
       <button class='sortButton'>Pokemon Types</button>
       <select id='typeSelector'>
         <option>Water</option>
         <option>Fire</option>
+        <option>Bug</option>
+        <option>Electric</option>
         <option>Grass</option>
         <option>Poison</option>
         <option>Ground</option>
@@ -37,7 +39,8 @@
     <main>
       <div class="pokeGrid"></div>
     </main>
-    <footer></footer>
+    <footer>     
+         <h4>sample portfolio created for DGM1600 by EJ Morin &copy; 2021 For Educational Purposes Only</h4></footer>
     <script src="pokecode.js" type="module"></script>
   </body>
 </html>
