--- a/pokemon/index.html
+++ b/pokemon/index.html
@@ -18,6 +18,7 @@
       <button class="randomPokemon">Random Pokemon</button>
       <button class="loadPokemon">Load 100 Pokemon</button>
       <button class="morePokemon">Load More Pokemon</button>
+      <!-- <button class="allPokemon">Load All Pokemon</button> -->
       <button class="newPokemon">Create a Pokemon</button>
       <button class='sortButton'>Pokemon Types</button>
       <select id='typeSelector'>
