edited pokebuttons, added D and R buttons

--- a/pokemon/index.html
+++ b/pokemon/index.html
@@ -15,7 +15,7 @@
     <title>pokemon Cards</title>
   </head>
   <body>
-    <header><h1>Pokemon Cards</h1> <br> <h2>Gotta flip 'em all</h2>
+    <header><h1>Pokemon Cards</h1> <br> <h2>Gotta flip 'em all!</h2>
       <button class="randomPokemon">Random Pokemon</button>
       <button class="loadPokemon">Load 100 Pokemon</button>
       <button class="morePokemon">Load More Pokemon</button>
