final edits, added link to port on each page

--- a/Congress/index.html
+++ b/Congress/index.html
@@ -20,6 +20,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Asap&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="favicon-16x16.png">
     <title>People of Congress</title>
 </head>
     <header><img src="capitolTop.png"><h1>We the People...<br>of Congress</h1><img src="USLogo.png">
@@ -49,7 +50,8 @@
             
         </div>
     </main>
-    <footer><h3>For Educational Purposes Only &copy; EJ Morin 2021</h3></footer>
+    <footer><h3>For Educational Purposes Only &copy; EJ Morin 2021<a id="portLink" href="../index.html" >
+        Click Here to return to Portfolio Home</a></h3></footer>
    <script src='congress.js' type="module"></script> 
 </body>
 </html>
