--- a/films/index.html
+++ b/films/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Qahiri&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="favicon-16x16.png">
     <title>STAR WARS FILMS
     </title>
 </head>
@@ -16,10 +17,8 @@
     <main id="filmlist"></main>
     <script src="starwars-films.js" type="module"></script>
 </body>
-<footer>
-    <h4>
-sample portfolio created for DGM1600 by EJ Morin &copy; 2021 For Educational Purposes Only
-    </h4>
+<footer><h3>For Educational Purposes Only &copy; EJ Morin 2021<a href="../index.html" class="portLink">
+    Click Here to return to Portfolio Home</a></h3></footer>
 </footer>
 </html>
 </html>
