--- a/pokemon/index.html
+++ b/pokemon/index.html
@@ -41,8 +41,8 @@
     <main>
       <div class="pokeGrid"></div>
     </main>
-    <footer>     
-         <h4>sample portfolio created for DGM1600 by EJ Morin &copy; 2021 For Educational Purposes Only</h4></footer>
+    <footer><h3>For Educational Purposes Only &copy; EJ Morin 2021<a href="../index.html" class="project-tile">
+      Click Here to return to Portfolio Home</a></h3></footer>
     <script src="pokecode.js" type="module"></script>
   </body>
 </html>
