--- a/characters/index.html
+++ b/characters/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Warnes&display=swap" rel="stylesheet"> 
     <link href="style.css" rel="stylesheet"/>
+    <link rel="icon" type="image/x-icon" href="favicon-16x16.png">
     <title>Star Wars Characters</title>
 </head>
 <header>
@@ -22,10 +23,7 @@
     <main id="main"></main>
     <script src="sw-chars.js" type="module"></script>
 </body>
-<footer>
-    <h4>
-sample portfolio created for DGM1600 by EJ Morin &copy; 2021 For Educational Purposes Only
-    </h4>
-</footer>
+    <footer><h3>For Educational Purposes Only &copy; EJ Morin 2021<a href="../index.html" class="portLink">
+    Click Here to return to Portfolio Home</a></h3></footer>
 </html>
 </html>
