--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Gemunu+Libre:wght@700&display=swap" rel="stylesheet">
+<link rel="icon" type="image/x-icon" href="favicon-16x16.png">
 
         <title>EJ's Personal Portfolio
         </title>
