--- a/starships/index.html
+++ b/starships/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Qahiri&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     <link href="style.css" rel="stylesheet"/>
+    <link rel="icon" type="image/x-icon" href="favicon-16x16.png">
     
     <title>Star Wars Starships</title>
 </head>
@@ -29,11 +30,8 @@
         </div>
         <button class="modal-close is-large" aria-label="close"></button>
     </div>
-    <footer>
-        <h4>
-sample portfolio created for DGM1600 by EJ Morin &copy; 2021 For Educational Purposes Only
-        </h4>
-    </footer>
+    <footer><h3>For Educational Purposes Only &copy; EJ Morin 2021<a href="../index.html" class="project-tile">
+        Click Here to return to Portfolio Home</a></h3></footer>
 </html>
     <script src="sw-starships.js" type="module"></script>
 </body>
