added blinking weasel list, added min-height vh

--- a/Congress/index.html
+++ b/Congress/index.html
@@ -36,22 +36,18 @@
 
     </ol>
 </div>
-<!--
-<button>Republicans</button>
-<button>Democrats</button>
-<button>Senators</button>
-<button>Representatives</button>
--->
     <main>
-        <main id="main"></main>
+        <main id="main2"></main>
 
         <main id="buttonHeader"></main>
         <div class="senators">
             
         </div>
     </main>
-    <footer><h3>For Educational Purposes Only &copy; EJ Morin 2021<a id="portLink" href="../index.html" >
-        Click Here to return to Portfolio Home</a></h3></footer>
-   <script src='congress.js' type="module"></script> 
+
+
 </body>
+<footer><h3>For Educational Purposes Only &copy; EJ Morin 2021<a id="portLink" href="../index.html" >
+    Click Here to return to Portfolio Home</a></h3></footer>
+<script src='congress.js' type="module"></script> 
 </html>
