--- a/characters/index.html
+++ b/characters/index.html
@@ -13,7 +13,7 @@
 </head>
 <header>
     <img id="rey" src="reySkywalkerResized.png">
-<h1 class="heading">Star Wars Characters</h1> 
+<h1 class="heading">Star Wars<br>Characters</h1> 
     <img class="c3po" src="c3p0andR2D2BlackandWhiteResized.png">
 </header>
 <p>
