--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         </title>
     </head>
     <body>
+    <header>
         <nav id="navbar">
             <ul class="nav-list">
             <li>
@@ -33,6 +34,7 @@
             </li>
             </ul>
         </nav>
+    </header>  
         <section id="welcome-section">
         <h1>Greetings there
         </h1>
